[package]
name = "pdx-fun-cli"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "pdx-fun"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { features = ["derive", "env"], workspace = true }
eu4game = { workspace = true, default-features = false, features = ["zstd_c", "embedded"] }
eu4save = { workspace = true, default-features = false, features = ["serialize", "zstd_c"] }
image = { workspace = true, features = ["png", "bmp"] }
pdx-assets = { workspace = true }
pdx-map = { workspace = true }
rawbmp = { workspace = true }
schemas = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
walkdir = { workspace = true }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { workspace = true }
