[package]
name = "schemas"
version = "0.1.0"
edition = "2021"
publish = false

[features]
inline = []

[dependencies]
flatbuffers = "23.1.21"
jomini = {version = "0.25" }

[build-dependencies]
flatc-rust = "*"

[dev-dependencies]
criterion = "0.3"
eu4save = { git = "https://github.com/rakaly/eu4save.git", default-features = false, features = ["miniz"] }
rand = "0.8"

[[bench]]
name = "schema_benchmark"
harness = false
