[package]
name = "schemas"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[features]
inline = []

[dependencies]
flatbuffers = { workspace = true }
jomini = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "schema_benchmark"
harness = false
