[package]
name = "vic3save"
version = "0.1.0"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
edition = "2021"
publish = false

[features]

[dependencies]
jomini =  { version = "0.28.0", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "2.0.0"
serde_path_to_error = "0.1"
getrandom = { version = "0.2", features = ["js"]}
mathru = "0.15.3"
flate2 = { version = "1.1.0", default-features = false, features = ["zlib-rs"] }
rawzip = "0.1.0"

[dev-dependencies]
attohttpc = "0.28.0"
