[package]
name = "vic3save"
version = "0.1.0"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
edition = "2021"
publish = false

[features]

[dependencies]
jomini =  { features = ["json"] , workspace = true }
serde = { features = ["derive"] , workspace = true }
thiserror = { workspace = true }
serde_path_to_error = { workspace = true }
getrandom = { features = ["js"], workspace = true }
mathru = { workspace = true }
flate2 = { default-features = false, features = ["zlib-rs"] , workspace = true }
rawzip = { workspace = true }

[dev-dependencies]
attohttpc = { workspace = true }
highway = { workspace = true }
