[package]
name = "vic3save"
version = "0.1.0"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
edition = "2024"
publish = false

[lints]
workspace = true

[features]

[dependencies]
jomini =  { features = ["json"] , workspace = true }
serde = { features = ["derive"] , workspace = true }
thiserror = { workspace = true }
getrandom = { features = ["wasm_js"], workspace = true }
mathru = { workspace = true }

[dev-dependencies]
attohttpc = { workspace = true }
highway = { workspace = true }
tempfile = { workspace = true }
