[package]
name = "wasm-app"
version = "0.1.0"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
tsify = { default-features = false, features = ["js"] , workspace = true }
serde = { features = ["derive"] , workspace = true }
eu4game-data = { features = ["tsify"] , workspace = true }
jomini = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
